# kakusu

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  kakusu.pc  kakusu.pc.in
cmake/: features.cmake  linting.cmake
src/: binary.hpp  crypto.hpp  digests.hpp  hash.hpp  legacy.hpp  ring.hpp
test/: binary.cpp  busuto.cpp  hitycho.cpp  minicrypt.cpp  openssl.cpp  sodium.cpp  wolfssl.cpp
